# SFML-Snake

./: CMakeLists.txt  README.md
src/: AI.cpp  AI.hpp  Game.hpp  main.cpp
